deploy/ingress/nginx/kafka-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: kafka-bootstrap
  name: kafka-bootstrap
  namespace: cno-system
spec:
  rules:
  - host: cno-broker.cluster.beopenit.com
    http:
      paths:
      - backend:
          serviceName: kafka-cluster-kafka-external-bootstrap
          servicePort: 9094
        path: /
