deploy/ingress/nginx/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    ingress.bluemix.net/proxy-busy-buffers-size : "size=128k"
  labels:
    app: keycloak
  name: cno-keycloak
spec:
  rules:
  - host: cno-auth.beopenit.com
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8443
        path: /
